# cpp-tasks

1/a/: CMakeLists.txt  main.cpp
1/b/: CMakeLists.txt  main.cpp
10/: main.cpp
2/: 1a.cpp  1b.cpp  2.md  3.md  4.cpp  5.cpp  6.cpp  CMakeLists.txt
3/: 1.cpp  2.cpp  4.cpp  CMakeLists.txt  commodity.cpp  commodity.hpp
4/: 1.cpp  2.cpp  CMakeLists.txt
5/: 1.cpp  2.cpp  CMakeLists.txt
6/: 1.cpp  2.cpp  CMakeLists.txt
7/: 1.cpp  2.cpp  ANSWERS.md  CMakeLists.txt  fraction.cpp  fraction.hpp  set.cpp  set.hpp
8/: 1.cpp  2.cpp  CMakeLists.txt
9/: CMakeLists.txt  main.cpp
